tests/snapshots/run_wpt_conformance__litert_gatherElements_float32_2D_input_and_uint32_indices_options_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherElements.https.any.js",
    "gatherElements float32 2D input and uint32 indices options.axis=1",
    "litert",
    "PASS",
)
