tests/snapshots/run_wpt_conformance__litert_gatherND_float16_3D_input_and_2D_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherND.https.any.js gatherND float16 3D input and 2D indices, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: GatherND { input: 1, indices: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherNDInput: f16[2, 2, 4];
  }

  consts {
    operand_0: i32[3, 2] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [gatherNDOutput] = gatherND(gatherNDInput, operand_0, label="");
  }

  outputs { gatherNDOutput; }
}
